tests/parser/valid/while.src
fn sum(int n) -> int {
    int result = 0;
    while (n > 0) {
        result = result + n;
        n = n - 1;
    }
    return result;
}
