tests/parser/invalid/mismatched_parens.src
fn test() -> int {
    int x = (5 + 3;
    return x;
}
